fix: erroneous command line argument after java 17