@@ -38,7 +38,7 @@
 		<sonar.dynamicAnalysis>reuseReports</sonar.dynamicAnalysis>
 		<sonar.projectName>Eno-WS</sonar.projectName>
 		<sonar.language>java</sonar.language>
-		<argLine>-Xms256m -Xmx512m -XX:MaxPermSize=128m -ea -Dfile.encoding=UTF-8</argLine>
+		<argLine>-Xms256m -Xmx512m -XX:MaxMetaspaceSize=128m -ea -Dfile.encoding=UTF-8</argLine>
 	</properties>
 
 	<repositories>
